--- a/api/package.json
+++ b/api/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-cron": "^2.0.3",
     "shelljs": "^0.8.4"
   }
 }
